[gd_scene load_steps=4 format=3 uid="uid://6x8cc0fngicq"]

[ext_resource type="StyleBox" uid="uid://btogefokonry7" path="res://libs/gui/interfaces/plugin_editor/modules/code_edit/code_edit.tres" id="1_c1dt0"]
[ext_resource type="Script" path="res://libs/gui/interfaces/plugin_editor/modules/code_edit/code_edit.gd" id="1_ds5mq"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_nyeeb"]
number_color = Color(0.513726, 0.941176, 0.752941, 1)
symbol_color = Color(0.537255, 0.701961, 0.772549, 1)
function_color = Color(0.0980392, 0.639216, 0.921569, 1)
member_variable_color = Color(0.478431, 0.698039, 0.756863, 1)
keyword_colors = {
"Plugin": Color(0.2, 0.9, 0.83, 1),
"extends": Color(0.768627, 0.317647, 0.298039, 1),
"func": Color(0.807843, 0.301961, 0.32549, 1),
"if": Color(0.847059, 0.505882, 0.784314, 1),
"var": Color(0.745098, 0.278431, 0.262745, 1)
}
color_regions = {
"#": Color(0.380392, 0.380392, 0.380392, 1)
}

[node name="CodeEdit" type="CodeEdit"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 5
theme_override_constants/outline_size = 0
theme_override_styles/normal = ExtResource("1_c1dt0")
theme_override_styles/focus = ExtResource("1_c1dt0")
highlight_current_line = true
draw_control_chars = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_nyeeb")
scroll_smooth = true
minimap_draw = true
caret_blink = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_bookmarks = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
code_completion_prefixes = [" ", "."]
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_ds5mq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="caret_changed" from="." to="." method="_on_CodeEdit_caret_changed"]
[connection signal="code_completion_requested" from="." to="." method="_on_CodeEdit_request_code_completion"]
[connection signal="symbol_lookup" from="." to="." method="_on_code_edit_symbol_lookup"]
[connection signal="symbol_validate" from="." to="." method="_on_code_edit_symbol_validate"]
[connection signal="text_changed" from="." to="." method="_on_CodeEdit_text_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
